// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle formatting for invalid JSON 1`] = `
<div
  className="display-flex-end"
>
  <textarea
    className="settings-large-input text-top monospaced spacer-right"
    name="foo"
    onChange={[Function]}
    rows={5}
    value="{"a": 1b}"
  />
  <div>
    <Alert
      variant="info"
    >
      settings.json.format_error
       
    </Alert>
    <Button
      className="spacer-top"
      onClick={[Function]}
    >
      settings.json.format
    </Button>
  </div>
</div>
`;

exports[`should render correctly 1`] = `
<div
  className="display-flex-end"
>
  <textarea
    className="settings-large-input text-top monospaced spacer-right"
    name="foo"
    onChange={[Function]}
    rows={5}
    value=""
  />
  <div>
    <Button
      className="spacer-top"
      onClick={[Function]}
    >
      settings.json.format
    </Button>
  </div>
</div>
`;
